--- a/CustomPathAnimation/Base.lproj/Main.storyboard
+++ b/CustomPathAnimation/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Start"/>
                                 <connections>
-                                    <action selector="puttonStart:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k0j-jL-tom"/>
+                                    <action selector="buttonStart:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k0j-jL-tom"/>
                                 </connections>
                             </button>
                         </subviews>
